# lapwing

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check.yml  publish.yml
docs/plans/: 2026-03-05-commands-design.md
lapwing/: __init__.py  _action_bus.py  _event_bus.py  _exceptions.py  _types.py
tests/: test_action_bus.py  test_event_bus.py
