[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "lapwing"
version = "1.0.0"
description = "Lightweight async message-passing building blocks: an action bus and an event bus"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
authors = [{ name = "Alexander Kurmazov", email = "akurmazov2001@gmail.com" }]
maintainers = [{ name = "Alexander Kurmazov", email = "akurmazov2001@gmail.com" }]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --showlocals --verbosity 2"
log_level = "DEBUG"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"

[tool.coverage.run]
source = ["lapwing"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = ["RUF022"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
combine-as-imports = true
